# APK-Workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES
EmptyActivity/: gradle.properties
SampleConsole/.apkw/: project.json
SampleConsole/app/src/main/java/com/example/sampleconsole/: MainActivity.kt
crates/aadk-build/: Cargo.toml
crates/aadk-cli/: Cargo.toml
crates/aadk-cli/src/: main.rs
crates/aadk-core/: Cargo.toml
crates/aadk-observe/: Cargo.toml
crates/aadk-project/: AGENTS.md  Cargo.toml
crates/aadk-proto/: Cargo.toml
crates/aadk-targets/: AGENTS.md  Cargo.toml
crates/aadk-targets/src/: cuttlefish.rs  service.rs
crates/aadk-telemetry/: Cargo.toml
crates/aadk-toolchain/: AGENTS.md  Cargo.toml
crates/aadk-toolchain/src/: catalog.rs  main.rs  service.rs  upstream.rs  verify.rs
crates/aadk-ui/: AGENTS.md  Cargo.toml
crates/aadk-ui/src/: commands.rs  main.rs  pages.rs  ui_state.rs  worker.rs
crates/aadk-util/: Cargo.toml
crates/aadk-workflow/: Cargo.toml
crates/apkw-build/: AGENTS.md  Cargo.toml
crates/apkw-build/src/: main.rs
crates/apkw-cli/: AGENTS.md  Cargo.toml
crates/apkw-cli/src/: main.rs
crates/apkw-core/: AGENTS.md  Cargo.toml
crates/apkw-core/src/: main.rs
crates/apkw-observe/: AGENTS.md  Cargo.toml
crates/apkw-observe/src/: main.rs
crates/apkw-project/: AGENTS.md  Cargo.toml
crates/apkw-project/src/: main.rs
crates/apkw-project/templates/: registry.json
crates/apkw-proto/: Cargo.toml  build.rs
crates/apkw-proto/src/: lib.rs
crates/apkw-targets/: AGENTS.md  Cargo.toml
crates/apkw-targets/src/: adb.rs  cuttlefish.rs  jobs.rs  main.rs  service.rs  state.rs
crates/apkw-telemetry/: AGENTS.md  Cargo.toml
crates/apkw-telemetry/src/: lib.rs
crates/apkw-toolchain/: AGENTS.md  Cargo.toml
crates/apkw-toolchain/fixtures/: ndk-r29.tar.zst  sdk-36.0.0.tar.zst
crates/apkw-toolchain/src/: artifacts.rs  catalog.rs  jobs.rs  main.rs  service.rs  state.rs  upstream.rs  verify.rs
crates/apkw-ui/: AGENTS.md  Cargo.toml
crates/apkw-ui/src/: commands.rs  config.rs  main.rs  pages.rs  ui_state.rs  worker.rs
crates/apkw-util/: Cargo.toml
crates/apkw-util/src/: lib.rs
crates/apkw-workflow/: AGENTS.md  Cargo.toml
crates/apkw-workflow/src/: main.rs
docs/: release.md
packaging/deb/: aadk.desktop  apkw.desktop  changelog.in  control.in  postrm
packaging/deb/man/: aadk-cli.1  aadk-ui.1  aadk.1  apkw-cli.1  apkw-ui.1  apkw.1
proto/aadk/v1/: AGENTS.md  toolchain.proto
proto/apkw/v1/: AGENTS.md  build.proto  common.proto  errors.proto  job.proto  observe.proto  project.proto  target.proto  toolchain.proto  workflow.proto
scripts/dev/: apkw-gradle.sh  run-all.sh
scripts/release/: aadk-env.sh  aadk-start.sh  apkw-env.sh  apkw-start.sh  build-deb.sh  build.sh  common.sh
