[workspace]
resolver = "2"
members = [
  "crates/apkw-util",
  "crates/apkw-telemetry",
  "crates/apkw-proto",
  "crates/apkw-core",
  "crates/apkw-workflow",
  "crates/apkw-toolchain",
  "crates/apkw-project",
  "crates/apkw-build",
  "crates/apkw-targets",
  "crates/apkw-observe",
  "crates/apkw-ui",
  "crates/apkw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
