[package]
name = "aadk-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aadk-proto = { path = "../aadk-proto" }
aadk-telemetry = { path = "../aadk-telemetry" }
fs2 = "0.4"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
