[package]
name = "apkw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apkw-proto = { path = "../apkw-proto" }
apkw-telemetry = { path = "../apkw-telemetry" }
apkw-util = { path = "../apkw-util" }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
