[package]
name = "apkw-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
apkw-proto = { path = "../apkw-proto" }
apkw-telemetry = { path = "../apkw-telemetry" }
apkw-util = { path = "../apkw-util" }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync"] }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
