[package]
name = "apkw-targets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
apkw-proto = { path = "../apkw-proto" }
apkw-telemetry = { path = "../apkw-telemetry" }
apkw-util = { path = "../apkw-util" }

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
