[package]
name = "apkw-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
apkw-proto = { path = "../apkw-proto" }
apkw-telemetry = { path = "../apkw-telemetry" }
apkw-util = { path = "../apkw-util" }

gtk4 = "0.11"
glib = "0.22"
webkit6 = "0.6.1"

tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync"] }
tonic = "0.12"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
